--- a/templates/cart.html
+++ b/templates/cart.html
@@ -33,7 +33,7 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link " href="#">
+            <a class="nav-link " href="./index.html">
               <center>
                 <i class="fas fa-mobile"></i>
                 All phones
@@ -62,9 +62,9 @@
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/login">Login</a>
-            <a class="dropdown-item" href="/register">Register</a>
-            <a class="dropdown-item" href="/">Log Out</a>
+            <a class="dropdown-item" href="./login.html">Login</a>
+            <a class="dropdown-item" href="./register.html">Register</a>
+            <a class="dropdown-item" href="./login.html">Log Out</a>
           </div>
         </li>
       </ul>
@@ -77,12 +77,12 @@
     <div class="cart-container">
       <div class="cart-items card">
         <h3 class="cart-title"><b>Order summary</b></h3>
-        <div class="cart-item wrapper row">
+        <div class="cart-item card-body wrapper row">
           <img class="cart-item-img col-md-3" src="../media/phone/samsung.jpg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
-              <div class="col-md-6" style="padding-left: 95px;">
+              <div class="col-md-6 cart-item-price">
                 20.0000.000 VND
                 <button class="btn" style="padding-top: 0px;">
                   <i class="fas fa-trash-alt"></i>
@@ -92,7 +92,7 @@
             <div class="cart-item-quantity">
               <h6 style="padding-top: 30px;">Quantity</h6>
             </div>
-            <div class="col-md-3 col-lg-3 col-xl-3 d-flex">
+            <div class="col-md-4 col-lg-4 col-xl-4 d-flex">
               <button class="btn btn-link px-1"
                 onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                 <i class="fas fa-minus"></i>
@@ -107,12 +107,12 @@
             </div>
           </div>
         </div>
-        <div class="cart-item wrapper row">
+        <div class="cart-item card-body wrapper row">
           <img class="cart-item-img col-md-3" src="../media/phone/samsung-z.jpeg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
-              <div class="col-md-6" style="padding-left: 95px;">
+              <div class="col-md-6 cart-item-price">
                 20.0000.000 VND
                 <button class="btn" style="padding-top: 0px;">
                   <i class="fas fa-trash-alt"></i>
@@ -122,7 +122,7 @@
             <div class="cart-item-quantity">
               <h6 style="padding-top: 30px;">Quantity</h6>
             </div>
-            <div class="col-md-3 col-lg-3 col-xl-3 d-flex">
+            <div class="col-md-4 col-lg-4 col-xl-4 d-flex">
               <button class="btn btn-link px-1"
                 onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                 <i class="fas fa-minus"></i>
@@ -137,12 +137,12 @@
             </div>
           </div>
         </div>
-        <div class="cart-item wrapper row">
+        <div class="cart-item card-body wrapper row">
           <img class="cart-item-img col-md-3" src="../media/phone/samsung2.jpg" alt="iphone">
           <div class="cart-item-details col-md-9">
             <div class="cart-item-desc row">
               <h6 class="col-md-6"><b>Product name</b></h6>
-              <div class="col-md-6" style="padding-left: 95px;">
+              <div class="col-md-6 cart-item-price">
                 20.0000.000 VND
                 <button class="btn" style="padding-top: 0px;">
                   <i class="fas fa-trash-alt"></i>
@@ -152,7 +152,7 @@
             <div class="cart-item-quantity">
               <h6 style="padding-top: 30px;">Quantity</h6>
             </div>
-            <div class="col-md-3 col-lg-3 col-xl-3 d-flex">
+            <div class="col-md-4 col-lg-4 col-xl-4 d-flex">
               <button class="btn btn-link px-1"
                 onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
                 <i class="fas fa-minus"></i>
@@ -256,7 +256,7 @@
       </div>
     </div>
     <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center text-dark p-3" style="background-color: #e4e4e4;">
       © 2022 Copyright:
       <a class="text-dark" href="#">HCMUT</a>
     </div>
