--- a/templates/admin-addProduct.html
+++ b/templates/admin-addProduct.html
@@ -35,7 +35,7 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="./admin-index.html">
               <center><i class="fas fa-mobile"></i>
                 All phones</center>
             </a>
@@ -69,9 +69,9 @@
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/login">Login</a>
-            <a class="dropdown-item" href="/register">Register</a>
-            <a class="dropdown-item" href="/">Log Out</a>
+            <a class="dropdown-item" href="./login.html">Login</a>
+            <a class="dropdown-item" href="./register.html">Register</a>
+            <a class="dropdown-item" href="./login.html">Log Out</a>
           </div>
         </li>
       </ul>
@@ -154,7 +154,7 @@
       </div>
     </div>
     <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center text-dark p-3" style="background-color: #e4e4e4;">
       © 2022 Copyright:
       <a class="text-dark" href="#">HCMUT</a>
     </div>
