--- a/templates/admin-manageUser.html
+++ b/templates/admin-manageUser.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>addmin - manage users</title>
+  <title>admin - manage users</title>
   <link rel="stylesheet" href="../static/styles.css">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.15.4/css/all.css">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -36,7 +38,7 @@
       <div class="header-content">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="./admin-index.html">
               <center><i class="fas fa-mobile"></i>
                 All phones</center>
             </a>
@@ -70,9 +72,9 @@
               style=" display: flex; color: #ffffff; width: 40; height: 40;"></i>
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="/login">Login</a>
-            <a class="dropdown-item" href="/register">Register</a>
-            <a class="dropdown-item" href="/">Log Out</a>
+            <a class="dropdown-item" href="./login.html">Login</a>
+            <a class="dropdown-item" href="./register.html">Register</a>
+            <a class="dropdown-item" href="./login.html">Log Out</a>
           </div>
         </li>
       </ul>
@@ -194,7 +196,7 @@
       </div>
     </div>
     <!-- Copyright -->
-    <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    <div class="text-center text-dark p-3" style="background-color: #e4e4e4;">
       © 2022 Copyright:
       <a class="text-dark" href="#">HCMUT</a>
     </div>
